Add standard CRUD operations

--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -1,16 +1,25 @@
-e.xx.fw.5001 = Resource not found.
+e.sc.fw.5001 = 該当ページがありません。
 
-e.xx.fw.7001 = Illegal screen flow detected!
-e.xx.fw.7002 = CSRF attack detected!
-e.xx.fw.7003 = Access Denied detected!
-e.xx.fw.7004 = Missing CSRF detected!
+e.sc.fw.7001 = 不正な画面操作が行われました。お手数ですが、再度操作を行ってください。
+e.sc.fw.7002 = 正規のルートからアクセスしてください。
+e.sc.fw.7003 = ページにアクセスする権限がありません。
+e.sc.fw.7004 = 正規のルートからアクセスしてください。
 
-e.xx.fw.8001 = Business error occurred!
+e.sc.fw.8001 = ビジネスルールに違反しています。再度オペレーションを行ってください。
 
-e.xx.fw.9001 = System error occurred!
-e.xx.fw.9002 = Data Access error!
+e.sc.fw.9001 = システムエラーが発生しました。システム管理者にお問い合わせください。なお、お問い合わせの際は、追跡番号「{0}」をお伝えください。
+e.sc.fw.9002 = システムエラーが発生しました。システム管理者にお問い合わせください。なお、お問い合わせの際は、追跡番号「{0}」をお伝えください。
 
-title.welcome.home = welcome home
+title.welcome.home = トップメニュー
+title.user.searchForm = ユーザー検索
+title.user.searchResult = ユーザー検索結果
+title.user.createForm = ユーザー登録
+title.user.createConfirm = ユーザー登録確認
+title.user.createComplete = ユーザー登録完了
+title.user.updateForm = ユーザー更新
+title.user.updateConfirm = ユーザー更新確認
+title.user.updateComplete = ユーザー更新完了
+title.user.deleteComplete = ユーザー削除完了
 
 # typemismatch
 typeMismatch="{0}" is invalid.
@@ -28,3 +37,13 @@ typeMismatch.java.lang.Short="{0}" must be a short.
 typeMismatch.java.lang.Boolean="{0}" is not a boolean.
 typeMismatch.java.util.Date="{0}" is not a date.
 typeMismatch.java.lang.Enum="{0}" is not a valid value.
+
+i.sc.um.2000 = 条件に一致するユーザーは登録されていません。
+i.sc.um.2001 = {0} ページ目のデータが存在しないため、最終ページのデータを表示しています。
+i.sc.um.1002 = ユーザーを削除しました。
+e.sc.um.8003 = 指定したユーザーIDは使用できません。
+i.sc.um.1004 = ユーザーを登録しました。
+e.sc.um.8005 = 他のオペレーターによってユーザーのデータが更新されています。申し訳ありませんが、操作をやり直してください。
+i.sc.um.1006 = ユーザーのデータを更新しました。
+e.sc.um.5007 = パスワードと確認パスワードには同じ値を入力してください。
+w.sc.um.2008 = このユーザーでログインするためには、パスワードの変更が必要です。
