Support Password change

--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -26,6 +26,8 @@ title.user.profileEditForm = プロファイル編集
 title.user.profileEditConfirm = プロファイル編集確認
 title.user.profileEditComplete = プロファイル編集完了
 
+title.user.passwordChangeForm = パスワード変更
+
 # typemismatch
 typeMismatch="{0}" is invalid.
 typeMismatch.int="{0}" must be an integer.
@@ -57,3 +59,5 @@ i.sc.um.1006 = ユーザーのデータを更新しました。
 e.sc.um.5007 = パスワードと確認パスワードには同じ値を入力してください。
 w.sc.um.2008 = このユーザーでログインするためには、パスワードの変更が必要です。
 i.sc.um.1009 = プロファイルを更新しました。
+i.sc.um.1010 = パスワードを変更しました。
+e.sc.um.5011 = パスワードを変更してください。
