--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -47,9 +47,9 @@ typeMismatch.java.lang.Enum="{0}" is not a valid value.
 
 w.sc.se.2000 = 有効なセッションがありません。
 i.sc.se.1001 = ログアウトしました。
-i.sc.se.1002 = ページを表示するためにログインが必要です。
+i.sc.se.1002 = ログインしてください。
 
-i.sc.um.2000 = 条件に一致するユーザーは登録されていません。
+i.sc.um.2000 = 条件に一致するユーザーは存在しません。
 i.sc.um.2001 = {0} ページ目のデータが存在しないため、最終ページのデータを表示しています。
 i.sc.um.1002 = ユーザーを削除しました。
 e.sc.um.8003 = 指定したユーザーIDは使用できません。
@@ -59,6 +59,5 @@ i.sc.um.1006 = ユーザーのデータを更新しました。
 e.sc.um.5007 = パスワードと確認パスワードには同じ値を入力してください。
 w.sc.um.2008 = このユーザーでログインするためには、パスワードの変更が必要です。
 i.sc.um.1009 = プロファイルを更新しました。
-i.sc.um.1010 = パスワードを変更しました。
-e.sc.um.5011 = パスワードを変更してください。
-e.sc.um.8012 = ユーザーID又はパスワードに誤りがあるため、パスワードを変更できません。
+i.sc.um.1010 = パスワードを変更してください。
+e.sc.um.8011 = ユーザーID又はパスワードに誤りがあるため、パスワードを変更できません。
