Refactoring message & support email address check

--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -29,7 +29,7 @@ title.user.profileEditComplete = プロファイル編集完了
 title.user.passwordChangeForm = パスワード変更
 
 # typemismatch
-typeMismatch="{0}" is invalid.
+typeMismatch= 正しい値を選択してください。
 typeMismatch.int="{0}" must be an integer.
 typeMismatch.double="{0}" must be a double.
 typeMismatch.float="{0}" must be a float.
@@ -44,6 +44,8 @@ typeMismatch.java.lang.Short="{0}" must be a short.
 typeMismatch.java.lang.Boolean="{0}" is not a boolean.
 typeMismatch.java.util.Date="{0}" is not a date.
 typeMismatch.java.lang.Enum="{0}" is not a valid value.
+
+typeMismatch.org.joda.time.LocalDate = 正しい日付を入力してください。
 
 w.sc.se.2000 = 有効なセッションがありません。
 i.sc.se.1001 = ログアウトしました。
