Improve validation & fixes bug.

--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -59,8 +59,10 @@ e.sc.um.8003 = 指定したユーザーIDは使用できません。
 i.sc.um.1004 = ユーザーを登録しました。
 e.sc.um.8005 = 他のオペレーターによってデータが更新されています。申し訳ありませんが、操作をやり直してください。
 i.sc.um.1006 = ユーザーのデータを更新しました。
-e.sc.um.5007 = パスワードと確認パスワードには同じ値を入力してください。
+e.sc.um.5007 = -
 w.sc.um.2008 = このユーザーでログインするためには、パスワードの変更が必要です。
 i.sc.um.1009 = プロファイルを更新しました。
 i.sc.um.1010 = パスワードを変更してください。
 e.sc.um.8011 = ユーザーID又はパスワードに誤りがあるため、パスワードを変更できません。
+
+ConfirmEquals.confirmPassword = パスワードと同じ値を入力してください。
