--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -65,4 +65,6 @@ i.sc.um.1009 = プロファイルを更新しました。
 i.sc.um.1010 = パスワードを変更してください。
 e.sc.um.8011 = ユーザーID又はパスワードに誤りがあるため、パスワードを変更できません。
 
+AbstractUserDetailsAuthenticationProvider.badCredentials = ユーザーID又はパスワードに誤りがあります。
+
 ConfirmEquals.confirmPassword = パスワードと同じ値を入力してください。
