--- a/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
+++ b/standard-crud-sample-web/src/main/resources/i18n/application-messages.properties
@@ -29,6 +29,10 @@ title.user.profileEditComplete = プロファイル編集完了
 
 title.user.passwordChangeForm = パスワード変更
 
+title.streetAddress.searchForm = 住所検索
+title.streetAddress.searchResult = 住所一覧
+
+
 # typemismatch
 typeMismatch= 正しい値を選択してください。
 typeMismatch.int="{0}" must be an integer.
